# tpm_provisioner

./: COPYING  Cargo.toml  Dockerfile  README.md  entrypoint.sh  verify.sh
docs/: steps_to_start_TCGTPM_simulator.md
src/: main.rs  tcg.rs
