[package]
name = "tpm_provisioner"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"


[dependencies]
tss-esapi = "7.5.0"
anyhow = "1.0"
openssl = "0.10"
rsa = { version = "0.9.10", features = ["sha2"] }
rand = "0.8"
pkcs8 = { version = "0.10.2", features = ["pem"] }
x509-cert = { version = "0.2.5", features = ["builder", "pem"] }
